--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<div id="app"></div>
+<!DOCTYPE html>
+<html lang="en">
+  body>
+    <h1 class="main-title">Supervivientes del Titanic </h1>
+    <h4 class="main-autor">Nombre: Raul Reyero</h3>
+    <h4 class="main-url">Url: <a href="https://js-aauhmw-titanic.stackblitz.io/">https://js-aauhmw-titanic.stackblitz.io/</a></h3>
+    <h4 class="main-fuente">Fuente: <a href="https://www.kaggle.com/francksylla/titanic-machine-learning-from-disaster/data">https://www.kaggle.com/francksylla/titanic-machine-learning-from-disaster/data</a></h3>
+    <h4 class="main-fecha">
