--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Mi objetivo es comunicar que merece la pena estudiar en España, sin embargo, ha
   <h2>3.Coste</h2>
     <p>Un tema a tener en cuenta es el precio de estudiar en España. Es un sistema con la mayoría de universidades públicas. Por tanto, lo que hay que comprobar es cuánto cuesta estudiar en España</p> <br>
     <p> ello presento el siguiente mapa de comunidades autonomas hecha con el precio medio del crédito en las universidades. Lo he hecho con flourish, que tiene una gran variedad de gráficas interactivas.Además, del mapa tiene un buscador para encontrar la comunidad autónoma.</p> <br>
-    
+  <p><strong> Conclusión: </strong> Vemos que el precio no son iguales en todas las comunidades autónomas. Por ello, es importante escoger donde continuar los estudios.   
   <div class="flourish-embed flourish-map" data-src="visualisation/2045424" data-url="https://flo.uri.sh/visualisation/2045424/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 
    
